
[TestListCmd/lists_scratchpad_windows_from_workspace - 1]
Context:
  workspaces:
  - workspace: ws1
    focused-window-id: 5678
  - workspace: .scratchpad
  windows:
  - window-id: 1234
    window-layout: tiling
    app-name: Notepad
    workspace: ws1
  - window-id: 5678
    window-layout: tiling
    app-name: Finder
    workspace: ws1
  - window-id: 9999
    window-layout: floating
    app-name: Scratchpad Window
    workspace: .scratchpad
  - window-id: 8888
    window-layout: floating
    app-name: Another Scratchpad Window
    workspace: .scratchpad
Command: |
  $ aerospace-scratchpad list
Output:
  status: success
  stdout: |
    command=list action=list window_id=8888 app_name="Another Scratchpad Window" workspace=.scratchpad target_workspace="" result=ok message=""
    command=list action=list window_id=9999 app_name="Scratchpad Window" workspace=.scratchpad target_workspace="" result=ok message=""
  error: ""

---

[TestListCmd/lists_floating_windows_as_scratchpad_windows - 1]
Context:
  workspaces:
  - workspace: ws1
    focused-window-id: 2222
  windows:
  - window-id: 1111
    window-layout: floating
    app-name: Floating Window
    workspace: ws1
  - window-id: 2222
    window-layout: tiling
    app-name: Tiling Window
    workspace: ws1
Command: |
  $ aerospace-scratchpad list
Output:
  status: success
  stdout: |
    command=list action=list window_id=1111 app_name="Floating Window" workspace=ws1 target_workspace="" result=ok message=""
  error: ""

---

[TestListCmd/lists_scratchpad_windows_with_filters - 1]
Context:
  workspaces:
  - workspace: .scratchpad
  windows:
  - window-id: 9999
    window-layout: floating
    app-name: Scratchpad Window
    workspace: .scratchpad
  - window-id: 8888
    window-layout: floating
    app-name: Another Window
    workspace: .scratchpad
Command: |
  $ aerospace-scratchpad list --filter app-name=^Scratchpad
Output:
  status: success
  stdout: |
    command=list action=list window_id=9999 app_name="Scratchpad Window" workspace=.scratchpad target_workspace="" result=ok message=""
  error: ""

---

[TestListCmd/lists_scratchpad_windows_in_json_format - 1]
Context:
  workspaces:
  - workspace: .scratchpad
  windows:
  - window-id: 9999
    window-layout: floating
    app-name: Scratchpad Window
    workspace: .scratchpad
Command: |
  $ aerospace-scratchpad list --output json
Output:
  status: success
  stdout: |
    {"command":"list","action":"list","window_id":9999,"app_name":"Scratchpad Window","workspace":".scratchpad","target_workspace":"","result":"ok","message":""}
  error: ""

---

[TestListCmd/returns_empty_result_when_no_scratchpad_windows - 1]
Context:
  workspaces:
  - workspace: ws1
    focused-window-id: 2222
  windows:
  - window-id: 2222
    window-layout: tiling
    app-name: Tiling Window
    workspace: ws1
Command: |
  $ aerospace-scratchpad list
Output:
  status: success
  stdout: |
    command=list action=list window_id=0 app_name="" workspace="" target_workspace="" result=none message="no scratchpad windows found"
  error: ""

---

[TestListCmd/works_with_ls_alias - 1]
Context:
  workspaces:
  - workspace: .scratchpad
  windows:
  - window-id: 9999
    window-layout: floating
    app-name: Scratchpad Window
    workspace: .scratchpad
Command: |
  $ aerospace-scratchpad ls
Output:
  status: success
  stdout: |
    command=list action=list window_id=9999 app_name="Scratchpad Window" workspace=.scratchpad target_workspace="" result=ok message=""
  error: ""

---

[TestListCmd/fails_when_getting_all_windows_returns_an_error - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad list
Output:
  status: error
  stdout: ""
  error: |
    Error: unable to get windows: mocked_error

---

[TestListCmd/fails_when_unknown_output_format_specified - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad list --output invalid-format
Output:
  status: error
  stdout: ""
  error: |
    Error: unsupported output format

---

[TestListCmd/fails_when_invalid_filter_syntax_used - 1]
Context:
  {}
Command: |
  $ aerospace-scratchpad list --filter invalid=*[regex
Output:
  status: error
  stdout: ""
  error: |
    Error: invalid regex pattern '*[regex': error parsing regexp: missing argument to repetition operator: `*`

---
